--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic Banking System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/lakshyagkmit/banking-system/issues"
   },
-  "homepage": "https://github.com/lakshyagkmit/banking-system#readme"
+  "homepage": "https://github.com/lakshyagkmit/banking-system#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7"
+  }
 }
