--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "prettier": "3.3.3"
   }
 }
