--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "format": "npx prettier --write \"./**/*.{js,jsx}\"",
+    "lint": "npx eslint ./"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "@eslint/js": "^9.14.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "husky": "^8.0.0",
     "prettier": "3.3.3"
   }
 }
