--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,12 @@
 # APP CONFIG
 PORT=
+
+
+#POSTGRES CONFIG
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+TEST_DATABASE=
+DB_DIALECT=
