--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,17 @@ DB_DIALECT=
 #REDIS CONFIG
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+
+
+#EMAIL SERVICE CONFIG
+SMPT_HOST=
+SMPT_PORT=
+SMPT_MAIL=
+SMPT_APP_PASS=
+
+
+#AWS CONFIG
+AWS_ACCESS_KEY=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_S3_BUCKET=
