--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "format": "npx prettier --write \"./**/*.{js,jsx}\"",
-    "lint": "npx eslint ./"
+    "lint": "npx eslint ./",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,8 @@
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "husky": "^8.0.0",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "jest": "^29.7.0",
+    "@faker-js/faker": "^9.2.0"
   }
 }
