--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/index.js",
     "format": "npx prettier --write \"./**/*.{js,jsx}\"",
     "lint": "npx eslint ./",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -35,15 +35,18 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "redis": "^4.7.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@faker-js/faker": "^9.2.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "husky": "^8.0.0",
-    "prettier": "3.3.3",
     "jest": "^29.7.0",
-    "@faker-js/faker": "^9.2.0"
+    "prettier": "3.3.3"
   }
 }
