--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@aws-sdk/client-s3": "^3.691.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
